# pei-assessment

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml
assessment/config/: initialize.py  request_config.py
assessment/extract/: load_data_sources.py  process.py
assessment/io/: reader.py  writer.py
assessment/load/: aggregates.py
assessment/transform/: process.py  utils.py
assessment/utils/: log_utils.py
src/assessment/: pipeline.py
src/assessment/config/: initialize.py  output_tables.py  request_config.py  run_modes.py
src/assessment/extract/: process.py
src/assessment/io/: reader.py  writer.py
src/assessment/load/: process.py  utils.py
src/assessment/transform/: process.py  utils.py
tests/: conftest.py
tests/test_config/: test_initialize.py  test_output_tables.py  test_request_config.py
tests/test_extract/: test_loader.py
tests/test_io/: test_reader.py  test_writer.py
tests/test_load/: conftest.py  test_aggregates.py  test_process.py  test_utils.py
tests/test_transform/: sample_integration_data.py  test_high_level_utils.py  test_integration.py  test_low_level_utils.py  test_process.py  test_transformations.py
