[project]
name = "pei-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark",
    "pandas",
    "pyarrow",
    "openpyxl",
    "pytest",
    "pytest-cov",
    "ipytest",
    "ipykernel",
    "pip",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
